--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/CSS/style.css">
-  <link rel="icon" href="/IMAGES/logopages.png" type="image/png">
+  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="icon" href="IMAGES/logopages.png" type="image/png">
   <title>Сайт-открытка к Дню Учителя</title>
 </head>
 <body>
   <!--шапка-->
   <header>
     <!--лого-->
-    <img src="/IMAGES/logo.svg" alt="logo">
+    <img src="IMAGES/logo.svg" alt="logo">
     <!--менюшка-->
     <nav>
       <ul>
@@ -25,7 +25,7 @@
   <section class="block_stih" >
     <h1> С праздником!</h1>
     <div class="stih">
-     <img src="/IMAGES/otkritka.jpg" alt="otkritka">
+     <img src="IMAGES/otkritka.jpg" alt="otkritka">
       <div class="stih_text">
       <p>Ваш труд для всех неоценим,<br>
       Ни в чем нельзя его измерить.<br>
@@ -53,9 +53,9 @@
     <div class="copy_infa">
       &#169; 2023 Похвальная Татьяна
       <div class="socsety">
-        <a href="https://vk.com/tashya_ho" target="_blank"><img src="/IMAGES/icon_vk.svg" alt="vk"></a>
-        <a href="https://t.me/BBBaychikov" target="_blank"><img src="/IMAGES/icon_tg.svg" alt="telegram"></a>
-        <a href="https://ok.ru/tasha.ho" target="_blank"><img src="/IMAGES/icon_ok.svg" alt="ok"></a>
+        <a href="https://vk.com/tashya_ho" target="_blank"><img src="IMAGES/icon_vk.svg" alt="vk"></a>
+        <a href="https://t.me/BBBaychikov" target="_blank"><img src="IMAGES/icon_tg.svg" alt="telegram"></a>
+        <a href="https://ok.ru/tasha.ho" target="_blank"><img src="IMAGES/icon_ok.svg" alt="ok"></a>
       </div>
     </div>
     <div class="scetcik">
