--- a/index.html
+++ b/index.html
@@ -78,5 +78,8 @@
         </tr>
       </table><NOSCRIPT><a href="http://www.24log.ru"></a></NOSCRIPT>
   </footer>
+
+  <script src="jquery-1.6.1.js"></script>
+  <script src="my_jquery.js"></script>
 </body>
 </html>
