--- a/curators.html
+++ b/curators.html
@@ -8,6 +8,18 @@
   <title>Кураторы</title>
 </head>
 <body>
-  
+  <!--шапка-->
+  <header>
+    <!--лого-->
+    <img src="./IMAGES/logo.svg" alt="logo">
+    <!--менюшка-->
+    <nav>
+      <ul>
+        <li><a href="#" class="selected">Поздравляшка</a></li>
+        <li><a href="curators.html">Кураторы</a></li>
+        <li><a href="masters.html">Мастера</a></li>
+      </ul>
+    </nav>
+  </header>
 </body>
 </html>
