--- a/curators.html
+++ b/curators.html
@@ -15,11 +15,12 @@
     <!--менюшка-->
     <nav>
       <ul>
-        <li><a href="#" class="selected">Поздравляшка</a></li>
-        <li><a href="curators.html">Кураторы</a></li>
+        <li><a href="index.html">Поздравляшка</a></li>
+        <li><a href="#" class="selected">Кураторы</a></li>
         <li><a href="masters.html">Мастера</a></li>
       </ul>
     </nav>
   </header>
+    <script src="my_jquery.js"></script>
 </body>
 </html>
