--- a/masters.html
+++ b/masters.html
@@ -8,6 +8,21 @@
   <title>Мастера</title>
 </head>
 <body>
-  
+  <!--шапка-->
+  <header>
+    <!--лого-->
+    <img src="./IMAGES/logo.svg" alt="logo">
+    <!--менюшка-->
+    <nav>
+      <ul>
+        <li><a href="index.html">Поздравляшка</a></li>
+        <li><a href="curators.html">Кураторы</a></li>
+        <li><a href="#"  class="selected">Мастера</a></li>
+      </ul>
+    </nav>
+  </header>
+
+
+    <script src="my_jquery.js"></script>
 </body>
 </html>
