--- a/masters.html
+++ b/masters.html
@@ -23,6 +23,23 @@
   </header>
 
 
-    <script src="my_jquery.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script>
+      $(window).on('load pageshow', function () {
+        $('body').removeClass("off");
+        $('body').addClass("on");
+      });
+      $("a:not([href*=\\#])").click(function () {
+        if (!$(this).attr('target')) {
+          $('body').removeClass("on");
+          $('body').addClass("off");
+          let url = $(this).attr('href');
+          window.setTimeout(function () {
+            window.location.href = url;
+          }, 400);
+          return false;
+        }
+      });
+    </script>
 </body>
 </html>
