--- a/curators.html
+++ b/curators.html
@@ -23,7 +23,22 @@
   </header>
   <!--кураторы-->
   <section class="block_cur" >
-
+    <h1>Спасибо!</h1>
+    <div class="teacher">
+      <div class="teach_img">
+        <img src="./IMAGES/ChTO2.jpg" alt="Татьяна Олеговна">
+        <div class="teach_info">
+          <h3>Чеботкова Татьяна Олеговна</h3>
+          <p>Самый первый учитель в моей жизни. Классная руководительница начальной школы №1. Помогла адаптироваться после садика, и была с нами на протяжении четырёх лет, даря свою поддержку, доброту и любовь до самого выпускного.</p>
+        </div>
+      </div>
+      <div class="teach_img">
+        <img src="./IMAGES/ShEF2.jpg" alt="Энжэ Фирдусовна">
+      </div>
+      <div class="teach_img">
+        <img src="./IMAGES/VMA2.jpg" alt="Марина Анатольевна">
+      </div>
+    </div>
   </section>
 
 <!--подвал-->
