--- a/curators.html
+++ b/curators.html
@@ -22,6 +22,7 @@
     </nav>
   </header>
   <!--кураторы-->
+  <main>
   <section class="block_cur" >
     <h1>Спасибо!</h1>
     <div class="teacher">
@@ -40,7 +41,7 @@
       </div>
     </div>
   </section>
-
+</main> 
 <!--подвал-->
 <footer>
   <div class="copy_infa">
