--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </nav>
   </header>
   <!--главная-->
+  <main>
   <section class="block_stih" >
     <h1>С праздником!</h1>
     <div class="stih">
@@ -48,6 +49,7 @@
         target="_blank">множество стихов на поздравок</a>
     </div>
   </section>
+  </main>
 <!--подвал-->
   <footer>
     <div class="copy_infa">
