--- a/curators.html
+++ b/curators.html
@@ -35,9 +35,17 @@
       </div>
       <div class="teach_img">
         <img src="./IMAGES/ShEF2.jpg" alt="Энжэ Фирдусовна">
+        <div class="teach_info">
+          <h3>Шарафисламова Энжэ Фирдусовна</h3>
+          <p>Классная руководительница с 5 по 9 классы, а также учитель английского языка школы №1. Пыталась привить ответственность и дисциплину нашему классу по новому. С добротой терпела нас за наши косяки и сорванные уроки.</p>
+        </div>
       </div>
       <div class="teach_img">
         <img src="./IMAGES/VMA2.jpg" alt="Марина Анатольевна">
+        <div class="teach_info">
+          <h3>Волобоева Марина Анатольевна</h3>
+          <p>Самый лучший куратор, преподователь химии и биологии в СовПК. Добрая, справедливая и заботливая преподовательница. Защищает своих амёбных студентов от других преподователей.</p>
+        </div>
       </div>
     </div>
   </section>
