--- a/masters.html
+++ b/masters.html
@@ -21,8 +21,34 @@
       </ul>
     </nav>
   </header>
+<!--мастера-->
 <main>
-
+  <section class="block_cur">
+    <h1>Спасибо!</h1>
+    <div class="teacher">
+      <div class="teach_img">
+        <img src="./IMAGES/BVI2.jpg" alt="Вячеслав Иванович">
+        <div class="teach_info">
+          <h3>Брейнерт Вячеслав Иванович</h3>
+          <p>Главный мастер производственного обучения. Преподователь проф.предметов связанных с веб-дизайном. Добрый, умеет мотивировать и поддерживать. Научил нас базе знаний, которая поможет нам в дальнейшем карьерном росте в сфере веба.</p>
+        </div>
+      </div>
+      <div class="teach_img">
+        <img src="./IMAGES/ADO2.jpg" alt="Денис Олегович">
+        <div class="teach_info">
+          <h3>Амеленко Денис Олегович</h3>
+          <p>Весёлый препод со смешными шутками. Шарит за разработку приложений виртуальной и дополненой реальности. Научил как работать с Unity и принципу создания компьютерных игр.</p>
+        </div>
+      </div>
+      <div class="teach_img">
+        <img src="./IMAGES/PEO2.jpg" alt="Евгений Олегович">
+        <div class="teach_info">
+          <h3>Поминов Евгений Олегович</h3>
+          <p>Главный критик ваших дизайнов. Научил как работать в Figma, показал базу для работы в иллюстраторе и фотошопе, а ткаже пытался научить работе в 1С. Помог сделать красивый дизайн для курсовой. Уволился(</p>
+        </div>
+      </div>
+    </div>
+  </section>
 </main>
 <!--подвал-->
 <footer>
