--- a/masters.html
+++ b/masters.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="./CSS/style.css">
   <link rel="icon" href="./IMAGES/logopages.png" type="image/png">
   <title>Мастера</title>
+  <script src="https://lidrekon.ru/slep/js/jquery.js"></script>
+  <script src="https://lidrekon.ru/slep/js/uhpv-full.min.js"></script>
 </head>
 <body>
   <!--шапка-->
@@ -19,6 +21,7 @@
         <li><a href="curators.html">Кураторы</a></li>
         <li><a href="#"  class="selected">Мастера</a></li>
       </ul>
+      <img id="specialButton" src="./IMAGES/special.svg" alt="ВЕРСИЯ ДЛЯ СЛАБОВИДЯЩИХ" title="ВЕРСИЯ ДЛЯ СЛАБОВИДЯЩИХ"/>
     </nav>
   </header>
 <!--мастера-->
