--- a/curators.html
+++ b/curators.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./CSS/style.css">
   <link rel="icon" href="./IMAGES/logopages.png" type="image/png">
   <title>Кураторы</title>
+  <script src="https://lidrekon.ru/slep/js/jquery.js"></script>
+  <script src="https://lidrekon.ru/slep/js/uhpv-full.min.js"></script>
 </head>
+
 <body>
   <!--шапка-->
   <header>
@@ -19,38 +23,45 @@
         <li><a href="#" class="selected">Кураторы</a></li>
         <li><a href="masters.html">Мастера</a></li>
       </ul>
+      <img id="specialButton" src="./IMAGES/special.svg" alt="ВЕРСИЯ ДЛЯ СЛАБОВИДЯЩИХ"
+        title="ВЕРСИЯ ДЛЯ СЛАБОВИДЯЩИХ" />
     </nav>
   </header>
   <!--кураторы-->
   <main>
-    <section class="block_cur" >
+    <section class="block_cur">
       <h1>Спасибо!</h1>
       <div class="teacher">
         <div class="teach_img">
           <img src="./IMAGES/ChTO2.jpg" alt="Татьяна Олеговна">
           <div class="teach_info">
             <h3>Чеботкова Татьяна Олеговна</h3>
-            <p>Самый первый учитель в моей жизни. Классная руководительница начальной школы №1. Помогла адаптироваться после садика, и была с нами на протяжении четырёх лет, даря свою поддержку, доброту и любовь до самого выпускного.</p>
+            <p>Самый первый учитель в моей жизни. Классная руководительница начальной школы №1. Помогла адаптироваться
+              после садика, и была с нами на протяжении четырёх лет, даря свою поддержку, доброту и любовь до самого
+              выпускного.</p>
           </div>
         </div>
         <div class="teach_img">
           <img src="./IMAGES/ShEF2.jpg" alt="Энжэ Фирдусовна">
           <div class="teach_info">
             <h3>Шарафисламова Энжэ Фирдусовна</h3>
-            <p>Классная руководительница с 5 по 9 классы, а также учитель английского языка школы №1. Пыталась привить ответственность и дисциплину нашему классу по новому. С добротой терпела нас за наши косяки и сорванные уроки.</p>
+            <p>Классная руководительница с 5 по 9 классы, а также учитель английского языка школы №1. Пыталась привить
+              ответственность и дисциплину нашему классу по новому. С добротой терпела нас за наши косяки и сорванные
+              уроки.</p>
           </div>
         </div>
         <div class="teach_img">
           <img src="./IMAGES/VMA2.jpg" alt="Марина Анатольевна">
           <div class="teach_info">
             <h3>Волобоева Марина Анатольевна</h3>
-            <p>Самый лучший куратор, преподователь химии и биологии в СовПК. Добрая, справедливая и заботливая преподовательница. Защищает своих амёбных студентов от других преподователей.</p>
+            <p>Самый лучший куратор, преподователь химии и биологии в СовПК. Добрая, справедливая и заботливая
+              преподовательница. Защищает своих амёбных студентов от других преподователей.</p>
           </div>
         </div>
       </div>
     </section>
-  </main> 
-<!--подвал-->
+  </main>
+  <!--подвал-->
   <footer>
     <div class="copy_infa">
       &#169; 2023 Похвальная Татьяна
@@ -83,4 +94,5 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="script.js"></script>
 </body>
+
 </html>
