--- a/masters.html
+++ b/masters.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./CSS/style.css">
   <link rel="icon" href="./IMAGES/logopages.png" type="image/png">
   <title>Мастера</title>
+  <script src="https://lidrekon.ru/slep/js/jquery.js"></script>
+  <script src="https://lidrekon.ru/slep/js/uhpv-full.min.js"></script>
 </head>
+
 <body>
   <!--шапка-->
   <header>
@@ -17,11 +21,13 @@
       <ul>
         <li><a href="index.html">Поздравляшка</a></li>
         <li><a href="curators.html">Кураторы</a></li>
-        <li><a href="#"  class="selected">Мастера</a></li>
+        <li><a href="#" class="selected">Мастера</a></li>
       </ul>
+      <img id="specialButton" src="./IMAGES/special.svg" alt="ВЕРСИЯ ДЛЯ СЛАБОВИДЯЩИХ"
+        title="ВЕРСИЯ ДЛЯ СЛАБОВИДЯЩИХ" />
     </nav>
   </header>
-<!--мастера-->
+  <!--мастера-->
   <main>
     <section class="block_cur">
       <h1>Спасибо!</h1>
@@ -30,21 +36,25 @@
           <img src="./IMAGES/BVI2.jpg" alt="Вячеслав Иванович">
           <div class="teach_info">
             <h3>Брейнерт Вячеслав Иванович</h3>
-            <p>Главный мастер производственного обучения. Преподователь проф.предметов связанных с веб-дизайном. Добрый, умеет мотивировать и поддерживать. Научил нас базе знаний, которая поможет нам в дальнейшем карьерном росте в сфере веба.</p>
+            <p>Главный мастер производственного обучения. Преподователь проф.предметов связанных с веб-дизайном. Добрый,
+              умеет мотивировать и поддерживать. Научил нас базе знаний, которая поможет нам в дальнейшем карьерном
+              росте в сфере веба.</p>
           </div>
         </div>
         <div class="teach_img">
           <img src="./IMAGES/ADO2.jpg" alt="Денис Олегович">
           <div class="teach_info">
             <h3>Амеленко Денис Олегович</h3>
-            <p>Весёлый препод со смешными шутками. Шарит за разработку приложений виртуальной и дополненой реальности. Научил как работать с Unity и принципу создания компьютерных игр.</p>
+            <p>Весёлый препод со смешными шутками. Шарит за разработку приложений виртуальной и дополненой реальности.
+              Научил как работать с Unity и принципу создания компьютерных игр.</p>
           </div>
         </div>
         <div class="teach_img">
           <img src="./IMAGES/PEO2.jpg" alt="Евгений Олегович">
           <div class="teach_info">
             <h3>Поминов Евгений Олегович</h3>
-            <p>Главный критик ваших дизайнов. Научил как работать в Figma, показал базу для работы в иллюстраторе и фотошопе, а ткаже пытался научить работе в 1С. Помог сделать красивый дизайн для курсовой. Уволился(</p>
+            <p>Главный критик ваших дизайнов. Научил как работать в Figma, показал базу для работы в иллюстраторе и
+              фотошопе, а ткаже пытался научить работе в 1С. Помог сделать красивый дизайн для курсовой. Уволился(</p>
           </div>
         </div>
       </div>
@@ -83,4 +93,5 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="script.js"></script>
 </body>
+
 </html>
